# mkdocs-portfolio

./: index.html  mkdocs.yml  pyproject.toml  replaces.txt
datascience/: index.html
dataviz/: index.html
dataviz/Air_Passengers/: index.html
docs/datascience/: index.md
docs/dataviz/: Air_Passengers.md  index.md
portfolio/docs/: index.md
portfolio/docs/datascience/: index.md
portfolio/docs/dataviz/: Air_Passengers.md
portfolio/site/: index.html
portfolio/site/datascience/: index.html
portfolio/site/search/: search_index.json
search/: search_index.json
site/: 404.html  index.html
site/dataviz/Air_Passengers/: index.html
site/search/: search_index.json
