[project]
name = "mkdocs-portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-bootstrap4>=0.1.5",
    "mkdocs-bootswatch>=1.1",
    "mkdocs-gitbook>=0.0.1",
    "mkdocs-simple-blog>=0.2.0",
    "mkdocs-terminal>=4.7.0",
]
